<resources>
    <string name="app_name">Service Novigrad</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_welcome_manager">Welcome</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="title_activity_register">Registration</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">Register</string>
    <string name="title_activity_welcome_admin">Administrator Settings</string>
    <string name="action_settings">Settings</string>
    <string name="users">Users</string>
    <string name="title_activity_employee">EmployeeActivity</string>
    <string name="profile_tab">Profile</string>
    <string name="service_tab">Services</string>
    <string name="hours_tab">Hours</string>
    <string name="employee_page">Employee Page</string>
    <string name="confirm">confirm</string>
    <string name="phone_number">Phone Number</string>
    <string name="postal_code">Postal Code</string>
    <string name="address">Address</string>
    <string name="address_line">Address Line</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="username">Username:</string>
    <string name="username_col">Username</string>
    <string name="email">Email:</string>
    <string name="role">Role:</string>
    <string name="manager">Manager</string>
    <string name="employee">Employee</string>
    <string name="customer">Customer</string>
    <string name="password">Password:</string>
    <string name="no_service_requests">No Service Requests</string>
    <string name="service_name">Service name</string>
    <string name="price">Price</string>
    <string name="customer_information_needed">Customer information needed:</string>
    <string name="customer_s_documents_needed">Customer\'s documents needed:</string>
    <string name="enter_an_item">Enter an item</string>
    <string name="add_info">add info</string>
    <string name="add_doc">add doc</string>
    <string name="apply_service">apply service</string>
    <string name="services">Services</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="_1">+1</string>
    <string name="information">Information</string>
    <string name="document">Document</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="no_registered_services">No Registered Services</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="review">REVIEW</string>
    <string name="review2">Review</string>

</resources>