<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/servicename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/service_name"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/priceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/price"
            android:inputType="numberDecimal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/Info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer_information_needed"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="16dp" />

        <ListView
            android:id="@+id/infolist"
            android:layout_width="match_parent"
            android:layout_height="96dp">

        </ListView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/docs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer_s_documents_needed"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="16dp" />

        <ListView
            android:id="@+id/docList"
            android:layout_width="match_parent"
            android:layout_height="96dp">

        </ListView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/itemtoadd"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:ems="10"
            android:hint="@string/enter_an_item"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:onClick="addInformation"
                android:text="@string/add_info" />

            <Button
                android:id="@+id/adddoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:onClick="addDocument"
                android:text="@string/add_doc" />

        </LinearLayout>

        <Button
            android:id="@+id/updateService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:onClick="updateService"
            android:text="@string/apply_service" />

    </LinearLayout>

</RelativeLayout>