<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ProfileUpdateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fntext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name" />

        <EditText
            android:id="@+id/firstNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="first name"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/lntext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name" />

        <EditText
            android:id="@+id/lastNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="last name"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/adtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_line" />

        <EditText
            android:id="@+id/addressLineText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="address"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textCapWords" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>

        <TextView
            android:id="@+id/pctext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/postal_code" />

        <EditText
            android:id="@+id/postalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="postal code"
            android:ems="10"
            android:hint="@string/postal_code"
            android:inputType="textCapCharacters"
            android:maxLength="7" />

        <TextView
            android:id="@+id/pntext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/plus1text"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="+1"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/numberText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789+"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:maxLength="10" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/applyButton"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_weight="0"
            android:text="@string/confirm" />

    </LinearLayout>
</RelativeLayout>